--- a/resources/assets/public/scss/public/_public_helpers.scss
+++ b/resources/assets/public/scss/public/_public_helpers.scss
@@ -679,7 +679,7 @@ table.ff_repeater_table {
 
   .repeat_btn {
     display: flex;
-    margin-top: 4%;
+    align-self: center;
   }
   .ff_repeater_header, .ff_repeater_cont_row {
     display: flex;
